--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 appdirs==1.4.3
 captcha==0.2.2
 Django==1.10.6
+django-pjax==1.4
 geoip2==2.4.2
 httplib2==0.10.3
 ipaddress==1.0.18
@@ -19,3 +20,4 @@ requests-oauthlib==0.8.0
 six==1.10.0
 social-auth-core==1.2.0
 virtualenv==15.1.0
+virtualenvwrapper-win==1.2.1
