--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,17 @@
-appdirs==1.4.3
-captcha==0.2.2
+certifi==2017.7.27.1
+chardet==3.0.4
 Django==1.10.6
-django-pjax==1.4
-geoip2==2.4.2
 httplib2==0.10.3
-ipaddress==1.0.18
-maxminddb==1.3.0
+idna==2.6
 oauth2==1.9.0.post1
-oauthlib==2.0.2
+oauthlib==2.0.4
 olefile==0.44
-packaging==16.8
-Pillow==4.0.0
-PyJWT==1.4.2
-pyparsing==2.2.0
+Pillow==4.3.0
+PyJWT==1.5.3
 python-openid==2.2.5
 python-social-auth==0.2.21
-requests==2.13.0
+requests==2.18.4
 requests-oauthlib==0.8.0
-six==1.10.0
-social-auth-core==1.2.0
-virtualenv==15.1.0
-virtualenvwrapper-win==1.2.1
+six==1.11.0
+todo==0.1
+urllib3==1.22
