--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,6 @@
 certifi==2017.7.27.1
-chardet==3.0.4
 Django==1.10.6
-httplib2==0.10.3
-idna==2.6
-oauth2==1.9.0.post1
-oauthlib==2.0.4
+django-pin-passcode==0.2.0
 olefile==0.44
 Pillow==4.3.0
-PyJWT==1.5.3
-python-openid==2.2.5
-python-social-auth==0.2.21
-requests==2.18.4
-requests-oauthlib==0.8.0
-six==1.11.0
 todo==0.1
-urllib3==1.22
