--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
 Django==1.11
-django-formtools==2.1
-django-wkhtmltopdf==3.1.0
+django-autofixture==0.12.1
+django-easy-pdf==0.1.1
+html5lib==1.0b10
+httplib2==0.10.3
+olefile==0.44
+Pillow==4.3.0
+PyPDF2==1.26.0
 pytz==2017.3
+reportlab==3.4.0
+six==1.11.0
+webencodings==0.5.1
+xhtml2pdf==0.2b1
